# aoc15-rust

./: Cargo.toml  README.md
2015-day01/: Cargo.toml
2015-day01/src/: tests.rs
2015-day02/src/: main.rs
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs  tests.rs
day03/src/: tests.rs
y2015-day01/src/: main.rs
y2015-day02/: Cargo.toml
y2015-day03/: Cargo.toml
y2015-day03/src/: main.rs  tests.rs
y2015-day04/: Cargo.toml
y2015-day04/src/: main.rs  tests.rs
y2015-day05/: Cargo.toml
y2015-day05/src/: main.rs  tests.rs
y2015-day06/: Cargo.toml
y2015-day06/src/: grid.rs  main.rs  tests.rs
y2015-day07/: Cargo.toml
y2015-day07/src/: main.rs  tests.rs
y2015-day08/: Cargo.toml
y2015-day08/src/: main.rs  tests.rs
y2016-day01/: Cargo.toml
y2016-day01/src/: main.rs  tests.rs
y2016-day02/: Cargo.toml
y2016-day02/src/: keypad.rs  main.rs  tests.rs
y2016-day03/: Cargo.toml
y2016-day03/src/: main.rs  tests.rs
y2016-day04/: Cargo.toml
y2016-day04/src/: main.rs  tests.rs
y2016-day05/: Cargo.toml
y2016-day05/src/: main.rs  tests.rs
y2016-day06/: Cargo.toml
y2016-day06/src/: main.rs  tests.rs
y2017-day01/: Cargo.toml
y2017-day01/src/: main.rs  tests.rs
y2017-day02/: Cargo.toml
y2017-day02/src/: main.rs  tests.rs
y2018-day01/: Cargo.toml
y2018-day01/src/: main.rs  tests.rs
y2018-day02/: Cargo.toml
y2018-day02/src/: main.rs  tests.rs
y2019-day01/: Cargo.toml
y2019-day01/src/: main.rs  tests.rs
y2020-day01/: Cargo.toml
y2020-day01/src/: main.rs  tests.rs
y2021-day01/: Cargo.toml
(+3 files in other folders)
