[workspace]
resolver = "2"
members = [
    "y2015-day01",
    "y2015-day02",
    "y2015-day03",
    "y2015-day04",
    "y2015-day05",
    "y2015-day06",
    "y2015-day07",
    "y2015-day08",
    "y2016-day01",
    "y2016-day02",
    "y2016-day03",
    "y2016-day04",
    "y2017-day01",
    "y2017-day02",
    "y2018-day01",
    "y2019-day01",
    "y2020-day01",
]
